<resources>
    <string name="app_name">TicTacToe</string>
    <string name="start_new_game">Start New Game</string>
    <string name="titactoe">Tic Tac Toe</string>
    <string name="Scoreboard">Score Board</string>
    <string name="TheGameBox">The Game Box</string>
    <string name="HANGMAN">HANGMAN</string>
    <string name="SCORES">SCORES</string>
    <string name="Games">Games</string>
    <string name="Credit">An application by:</string>
    <string name="Noam">Noam Zeltser</string>
    <string name="Jacques">Jacques Ren</string>
    <string name="Selma">Selma Castella</string>
    <string name="Léo">Léo Pellan</string>
    <string name="init_word">_ _ _ _ _ _ _ _</string>
    <string name="new_game">New Game</string>
    <string name="details_title">Hangman</string>
    <string name="abs_letters">Missed : </string>
    <string name="made_at">Made at</string>
    <string-array name="listWord">
        <item>WEAKNESS</item>
        <item>PASSWORD</item>
        <item>ANALYSIS</item>
        <item>JUDGMENT</item>
        <item>SANDWICH</item>
        <item>CRACKPOT</item>
        <item>BATHROOM</item>
        <item>DOMESTIC</item>
        <item>SECURITY</item>
        <item>CLASSIFY</item>
        <item>MINIMIZE</item>
        <item>SURVIVAL</item>
        <item>DELICATE</item>
        <item>APPETITE</item>
        <item>TENDENCY</item>
    </string-array>
</resources>
