<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/wordShowing"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:text="@string/init_word"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="269dp"
        android:backgroundTint="@color/grey"
        android:text="A"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonG"
        app:layout_constraintEnd_toStartOf="@+id/buttonB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonB"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginTop="269dp"
        android:backgroundTint="@color/grey"
        android:text="B"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonH"
        app:layout_constraintEnd_toStartOf="@+id/buttonC"
        app:layout_constraintStart_toEndOf="@+id/buttonA"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonC"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginTop="269dp"
        android:backgroundTint="@color/grey"
        android:text="C"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonI"
        app:layout_constraintEnd_toStartOf="@+id/buttonD"
        app:layout_constraintStart_toEndOf="@+id/buttonB"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonD"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginTop="269dp"
        android:backgroundTint="@color/grey"
        android:text="D"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonJ"
        app:layout_constraintEnd_toStartOf="@+id/buttonE"
        app:layout_constraintStart_toEndOf="@+id/buttonC"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonE"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginTop="269dp"
        android:backgroundTint="@color/grey"
        android:text="E"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonK"
        app:layout_constraintEnd_toStartOf="@+id/buttonF"
        app:layout_constraintStart_toEndOf="@+id/buttonD"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonF"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/grey"
        android:text="F"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonE"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonG"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/grey"
        android:text="G"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonM"
        app:layout_constraintEnd_toStartOf="@+id/buttonH"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonH"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/grey"
        android:text="H"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonN"
        app:layout_constraintEnd_toStartOf="@+id/buttonI"
        app:layout_constraintStart_toEndOf="@+id/buttonG"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonI"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/grey"
        android:text="I"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonO"
        app:layout_constraintEnd_toStartOf="@+id/buttonJ"
        app:layout_constraintStart_toEndOf="@+id/buttonH"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonJ"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/grey"
        android:text="J"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonP"
        app:layout_constraintEnd_toStartOf="@+id/buttonK"
        app:layout_constraintStart_toEndOf="@+id/buttonI"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonK"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/grey"
        android:text="K"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonQ"
        app:layout_constraintEnd_toStartOf="@+id/buttonL"
        app:layout_constraintStart_toEndOf="@+id/buttonJ"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonL"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/grey"
        android:text="L"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonK"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonM"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/grey"
        android:text="M"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonS"
        app:layout_constraintEnd_toStartOf="@+id/buttonN"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonN"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/grey"
        android:text="N"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonT"
        app:layout_constraintEnd_toStartOf="@+id/buttonO"
        app:layout_constraintStart_toEndOf="@+id/buttonM"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonO"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/grey"
        android:text="O"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonU"
        app:layout_constraintEnd_toStartOf="@+id/buttonP"
        app:layout_constraintStart_toEndOf="@+id/buttonN"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonP"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/grey"
        android:text="P"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonV"
        app:layout_constraintEnd_toStartOf="@+id/buttonQ"
        app:layout_constraintStart_toEndOf="@+id/buttonO"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonQ"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/grey"
        android:text="Q"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonW"
        app:layout_constraintEnd_toStartOf="@+id/buttonR"
        app:layout_constraintStart_toEndOf="@+id/buttonP"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonR"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/grey"
        android:text="R"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonQ"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonS"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/grey"
        android:text="S"
        android:textColor="#656565"
        app:layout_constraintEnd_toStartOf="@+id/buttonT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonM"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonT"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/grey"
        android:text="T"
        android:textColor="#656565"
        app:layout_constraintEnd_toStartOf="@+id/buttonU"
        app:layout_constraintStart_toEndOf="@+id/buttonS"
        app:layout_constraintTop_toBottomOf="@+id/buttonN"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonU"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/grey"
        android:text="U"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonY"
        app:layout_constraintEnd_toStartOf="@+id/buttonV"
        app:layout_constraintStart_toEndOf="@+id/buttonT"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonV"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/grey"
        android:text="V"
        android:textColor="#656565"
        app:layout_constraintBottom_toTopOf="@+id/buttonZ"
        app:layout_constraintEnd_toStartOf="@+id/buttonW"
        app:layout_constraintStart_toEndOf="@+id/buttonU"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonW"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/grey"
        android:text="W"
        android:textColor="#656565"
        app:layout_constraintEnd_toStartOf="@+id/buttonX"
        app:layout_constraintStart_toEndOf="@+id/buttonV"
        app:layout_constraintTop_toBottomOf="@+id/buttonQ"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonX"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/grey"
        android:text="X"
        android:textColor="#656565"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonW"
        app:layout_constraintTop_toBottomOf="@+id/buttonR"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonY"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/grey"
        android:text="Y"
        android:textColor="#656565"
        app:layout_constraintEnd_toStartOf="@+id/buttonZ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonU"
        android:onClick="selectLetter"/>

    <Button
        android:id="@+id/buttonZ"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginEnd="155dp"
        android:backgroundTint="@color/grey"
        android:text="Z"
        android:textColor="#656565"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonY"
        app:layout_constraintTop_toBottomOf="@+id/buttonV"
        android:onClick="selectLetter"/>

    <TextView
        android:id="@+id/Missed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/abs_letters"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hangman" />

    <TextView
        android:id="@+id/Hangman"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/details_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FF0000"
        android:textSize="90dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:text="NEW WORD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="launchNewGame"/>

</androidx.constraintlayout.widget.ConstraintLayout>